Fix logo align

--- a/Assets/dev/less/menu.less
+++ b/Assets/dev/less/menu.less
@@ -32,6 +32,7 @@
 
             @media (max-width: @screen-md-max) {
                 height: 200px;
+                margin-left: 0;
             }
 
         }
